# do-my-tasks

./: .gitignore  README.ko.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/dmt/: SKILL.md
.claude/skills/skill-creator/: SKILL.md
docs/: claude-code-jsonl-structure.md
scripts/: install.sh  uninstall.sh
src/do_my_tasks/: __init__.py  __main__.py
src/do_my_tasks/cli/: main.py  output.py
src/do_my_tasks/cli/commands/: collect.py  config.py  plan.py  session.py  summary.py  task.py  web.py
src/do_my_tasks/core/: collector.py  git_analyzer.py  session_parser.py  task_manager.py
src/do_my_tasks/intelligence/: priority_analyzer.py  summarizer.py  todo_generator.py
src/do_my_tasks/menubar/: __main__.py  app.py
src/do_my_tasks/models/: commit.py  report.py  session.py  task.py
src/do_my_tasks/reporting/: generator.py
src/do_my_tasks/reporting/templates/: daily.md.j2
src/do_my_tasks/storage/: database.py  repository.py  tables.py
src/do_my_tasks/utils/: config.py  logger.py
src/do_my_tasks/web/: __init__.py  app.py
src/do_my_tasks/web/templates/: _task_card.html  activity.html  base.html  dashboard.html  guide.html  projects.html  sessions.html  tasks.html
tests/: conftest.py  test_cli.py
tests/fixtures/: sample_session.jsonl
tests/test_core/: test_git_analyzer.py  test_session_commands.py  test_session_parser.py  test_task_manager.py
tests/test_intelligence/: test_priority_analyzer.py
